# achievements

./: README.md
CEREAL_OS/codigo_final/: codigo_final.ino
DOG-BOT/CAD_models/Grabber/: Ensamble_Grabber.SLDASM  Grabber part a.SLDPRT  Grabber part b.SLDPRT  Grabber part c_hembra.SLDPRT  Grabber part c_macho.SLDPRT  Grabber part d_hembra.SLDPRT  Grabber part d_macho.SLDPRT  Grabber.SLDPRT  Pelotica.SLDPRT
DOG-BOT/ROS1-2/SimuGazRealCV2 - actual/: insumos
DOG-BOT/ROS1-2/SimuGazRealCV2 - actual/ros2_ws/src/: camera.tar.xz  neural_network.tar.xz
DOG-BOT/ROS1-2/SimuGazRealCV2 - actual/ros2_ws/src/camera/: CMakeLists.txt  package.xml
DOG-BOT/ROS1-2/SimuGazRealCV2 - actual/ros2_ws/src/camera/src/: CameraAdjust.py  CameraSubscriber.py
DOG-BOT/ROS1-2/SimuGazRealCV2 - actual/ros2_ws/src/codigos/: CMakeLists.txt  package.xml
DOG-BOT/ROS1-2/SimuGazRealCV2 - actual/ros2_ws/src/codigos/src/: presion.py  serial_motores_velocity.py  subscriptor_arduino.py  vel.py  velocity.py
DOG-BOT/ROS1-2/SimuGazRealCV2 - actual/ros2_ws/src/cpp_examples/: CMakeLists.txt  package.xml
DOG-BOT/ROS1-2/SimuGazRealCV2 - actual/ros2_ws/src/cpp_examples/src/: camera_subscriber.cpp  copia_segg.cpp  neural_network.cpp  publisher_member_function.cpp.cpp  red_funcional.cpp
DOG-BOT/ROS1-2/SimuGazRealCV2 - actual/ros2_ws/src/diff_robot/: CMakeLists.txt  package.xml
DOG-BOT/ROS1-2/SimuGazRealCV2 - actual/ros2_ws/src/diff_robot/config/: twist_mux.yaml
DOG-BOT/ROS1-2/SimuGazRealCV2 - actual/ros2_ws/src/diff_robot/description/: camera.xacro  gazebo_control.xacro  gripper.xacro  imu_sensor.xacro  lidar.xacro  lidar_2.xacro  robot.urdf.xacro  robot_core.xacro
DOG-BOT/ROS1-2/SimuGazRealCV2 - actual/ros2_ws/src/diff_robot/launch/: launch_robot.launch.py  launch_sim.launch.py  rsp.launch.py
DOG-BOT/ROS1-2/SimuGazRealCV2 - actual/ros2_ws/src/diff_robot/meshes/: deslizador_der.STL  deslizador_izq.STL  gripper_der.STL  gripper_izq.STL
DOG-BOT/ROS1-2/SimuGazRealCV2 - actual/ros2_ws/src/diff_robot/scr/: robot_square.py
DOG-BOT/ROS1-2/SimuGazRealCV2 - actual/ros2_ws/src/gripper/: CMakeLists.txt  package.xml
DOG-BOT/ROS1-2/SimuGazRealCV2 - actual/ros2_ws/src/gripper/description/: gripper_urdf2.urdf
DOG-BOT/ROS1-2/SimuGazRealCV2 - actual/ros2_ws/src/gripper/launch/: rsp.launch.py
DOG-BOT/ROS1-2/SimuGazRealCV2 - actual/ros2_ws/src/gripper/meshes/: acople_gripper.STL  base_gripper.STL  motor_gripper.STL
DOG-BOT/ROS1-2/SimuGazRealCV2 - actual/ros2_ws/src/neural_networks/: CMakeLists.txt  package.xml
DOG-BOT/ROS1-2/SimuGazRealCV2 - actual/ros2_ws/src/neural_networks/scripts/: coordinates_x_y.py  subscriber_cpp.cpp
DOG-BOT/ROS1-2/neuroblastoise_ws_launch/neuroblastoise_ws/src/: camera.tar.xz
DOG-BOT/ROS1-2/neuroblastoise_ws_launch/neuroblastoise_ws/src/camera/: CMakeLists.txt  package.xml
DOG-BOT/ROS1-2/neuroblastoise_ws_launch/neuroblastoise_ws/src/camera/src/: CameraAdjust.py  CameraSubscriber.py
DOG-BOT/ROS1-2/neuroblastoise_ws_launch/neuroblastoise_ws/src/my_robot_controller/: CMakeLists.txt  package.xml
DOG-BOT/ROS1-2/neuroblastoise_ws_launch/neuroblastoise_ws/src/my_robot_controller/launch/: launch_net.launch
DOG-BOT/ROS1-2/neuroblastoise_ws_launch/neuroblastoise_ws/src/my_robot_controller/src/: gripper_publisher.cpp  gripper_suscriber.cpp  neural_network.cpp  read_esp.py  simple_publisher.cpp  simple_subscriber.cpp
MLP/Matlab/: MLP_generalization_Sebastian_grajales.m
MLP/Python/: MLP_gene_Softmax.py  MLP_generalizado_ADAM.py
SCARA/: README.txt
SCARA/Archivos/: CINEMATICAS_COMPLETO.py  MTH.py  MTH_V2.py  SCARA.kinbin  SCARA_MTH.py  SCARA_MTH_ALG.py  SCARA_geométrico.py  ejemplo_sympy.py  numerica_adapt.py  prueba.py  vueltas
SCARA/Arduino_code/SCARA_control_numericos/lib/I2C_module/: i2c_module.cpp  i2c_module.h
SCARA/Arduino_code/SCARA_control_numericos/src/: cop_Seg  main.cpp
SCARA/src/scara_joints/: CMakeLists.txt  package.xml
SCARA/src/scara_joints/src/: comunicacion_arduino.py  interfaz_usuario.py  inversa_prueba.py  joint_publisher.py
SCARA/src/scara_urdf/: package.xml  setup.cfg  setup.py
SCARA/src/scara_urdf/launch/: display.launch.py  interfaz_launch.py  inversa.launch.py
SCARA/src/scara_urdf/meshes/: base_link.STL  link_1.STL  link_2.STL  link_3.STL  link_4.STL  link_5.STL  link_6.STL
SCARA/src/scara_urdf/urdf/: scara.urdf
SOM/SOM_HAYKIN/: Caracteristicas.csv  Mini_SOM.csv  SOM_Haykin_Sebastian_Grajales.m
SOM/TOROIDAL_SOM/: SOM_work_out.py  colores_16.npy  ejercicio_nuevo.csv  som_library.py
